--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,15 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 'Checkout'
-        uses: actions/checkout@v3
-
-      - name: 'Before'
-        run: ls
-
       - uses: actions/checkout@v3
         
-      - name: 'After'
-        run: ls
-
-
+      - name: 'login to Docker hub'
+        run: docker login --username ${{secrets.HAROUN }} --password ${{secrets.HAAROUN_TOKEN }}
