--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,10 @@ jobs:
         
       - name: 'login to Docker hub'
         run: docker login --username ${{secrets.DOCKER_USERNAME }} --password ${{secrets.DOCKER_TOKEN }}
+
+
+      - name: "Bulding docker image"
+        run: docker build -t ${{secrets.DOCKER_USERNAME }}/mahmoudahmed202340067 .
+
+      - name: "Pushing to Docker hub"
+        run: docker push ${{secrets.DOCKER_USERNAME }}/mahmoudahmed202340067     
